--- a/index.html
+++ b/index.html
@@ -76,6 +76,152 @@
         </div>
     </div>
 
+    <!-- Design-two -->
+    <div class="container-fluid design-two">
+        <div class="chatbot">
+            <div class="header">
+                <div class="col-xl-12">
+                    <div class="row">
+                        <div class="col-xl-2 col-2">
+                            <div class="p-image"><img src="images/user.png"></div>
+                        </div>
+                        <div class="col-xl-5 col-5 p-0">
+                            <h6>Ask myHR</h6>
+                        </div>
+                        <div class="col-xl-1 col-1 ml-auto"><span class="material-icons-outlined">refresh</span></div>
+                        <div class="col-xl-1 col-1"><span class="material-icons-outlined">close</span></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-12 chat-content">
+                <div class=" question-one">How do I change my withholdings for my bonus?</div>
+                <div class="para-gray">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+                </div>
+                <div class="controls-space"></div>
+
+                <!-- Slider -->
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div class="col-xl-12 slider-head">Product One</div>
+                            </div>
+                            <div class="col-xl-12 slider-content">
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature One</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4 gray-bg">Feature two</div>
+                                    <div class="col-xl-8 col-8 gray-bg">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature three</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-xl-12 slider-head">Product Two</div>
+                            </div>
+                            <div class="col-xl-12 slider-content">
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature One</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4 gray-bg">Feature two</div>
+                                    <div class="col-xl-8 col-8 gray-bg">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature three</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-xl-12 slider-head">Product Three</div>
+                            </div>
+                            <div class="col-xl-12 slider-content">
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature One</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4 gray-bg">Feature two</div>
+                                    <div class="col-xl-8 col-8 gray-bg">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature three</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-xl-12 slider-head">Product Four</div>
+                            </div>
+                            <div class="col-xl-12 slider-content">
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature One</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4 gray-bg">Feature two</div>
+                                    <div class="col-xl-8 col-8 gray-bg">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-4 col-4">Feature three</div>
+                                    <div class="col-xl-8 col-8">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting industry</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators"
+                        data-slide="prev">
+                        <span class="material-icons-outlined">chevron_left</span>
+                        <span class="sr-only">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators"
+                        data-slide="next">
+                        <span class="material-icons-outlined">navigate_next</span>
+                        <span class="sr-only">Next</span>
+                    </button>
+                </div>
+            </div>
+
+            <form action="#">
+                <div class="form-box">
+                    <input type="text" placeholder="Ask something">
+                    <button type="submit"><span class="material-icons">near_me</span></button>
+                </div>
+            </form>
+            <div class="copyright text-right">© Powered by Cognicor</div>
+        </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
