--- a/index.html
+++ b/index.html
@@ -222,6 +222,48 @@
             <div class="copyright text-right">© Powered by Cognicor</div>
         </div>
     </div>
+
+    <!-- Design-three -->
+    <div class="container-fluid design-three">
+        <div class="chatbot">
+            <div class="header">
+                <div class="col-xl-12">
+                    <div class="row">
+                        <div class="col-xl-2 col-2">
+                            <div class="p-image"><img src="images/user.png"></div>
+                        </div>
+                        <div class="col-xl-5 col-5 p-0">
+                            <h6>Ask myHR</h6>
+                        </div>
+                        <div class="col-xl-1 col-1 ml-auto"><span class="material-icons-outlined">refresh</span></div>
+                        <div class="col-xl-1 col-1"><span class="material-icons-outlined">close</span></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-12 chat-content">
+                <div class=" question-one">Lorem Ipsum is simply dummy text of the printing </div>
+                <div class="p-third">
+                    <h5>Lorem Ipsum is simply dummy text Lorem Ipsum is simply</h5>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since the 1500s, <span id="points"></span><span id="moreText">when an unknown printer took</span>
+                        <button onclick="toggleText()" id="textButton" class="read-more-btn">Read More</button></p>
+                </div>
+                <div class="p-third">
+                    <h5>Lorem Ipsum is simply dummy text Lorem Ipsum is simply</h5>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, <span id="points-1"></span><span id="moreText-1">when an unknown printer took</span>
+                        <button onclick="toggleText1()" id="textButton-1" class="read-more-btn">Read More</button></p>
+                </div>
+            </div>
+
+            <form action="#">
+                <div class="form-box">
+                    <input type="text" placeholder="Ask something">
+                    <button type="submit"><span class="material-icons">near_me</span></button>
+                </div>
+            </form>
+            <div class="copyright text-right">© Powered by Cognicor</div>
+        </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -238,6 +280,52 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     -->
+
+    <!-- Read more js -->
+    <script>
+        function toggleText() {
+            var points =
+                document.getElementById("points");
+
+            var showMoreText =
+                document.getElementById("moreText");
+
+            var buttonText =
+                document.getElementById("textButton");
+            if (points.style.display === "none") {
+                showMoreText.style.display = "none";
+                points.style.display = "inline";
+                buttonText.innerHTML = "Show More";
+            }
+            else {
+                showMoreText.style.display = "inline";
+                points.style.display = "none";
+                buttonText.innerHTML = "Show Less";
+            }
+        }
+
+        function toggleText1() {
+            var points =
+                document.getElementById("points-1");
+
+            var showMoreText =
+                document.getElementById("moreText-1");
+
+            var buttonText =
+                document.getElementById("textButton-1");
+            if (points.style.display === "none") {
+                showMoreText.style.display = "none";
+                points.style.display = "inline";
+                buttonText.innerHTML = "Show More";
+            }
+            else {
+                showMoreText.style.display = "inline";
+                points.style.display = "none";
+                buttonText.innerHTML = "Show Less";
+            }
+        }
+    </script>
+
 </body>
 
 </html>
